--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">Circleoflinks</string>
+
+    <string-array name="profesion_list">
+
+        <item>Medico </item>
+        <item>Enfermero </item>
+        <item>Profesor </item>
+        <item>Tutor </item>
+        <item>Pedagogo </item>
+        <item>Ingeniero informatico</item>
+        <item>Desarrollador web</item>
+        <item>Investigador </item>
+        <item>Artista</item>
+        <item>Musico</item>
+        <item>Obrero</item>
+        <item>Administrativo</item>
+        <item>Guardia</item>
+
+    </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
